syntax = "proto3";

option go_package = "./pb";

package pb;


message GetUserInfoReq {
  int64 id = 1;
}
message GetUserInfoResp {
  int64  id       = 1;
  string nickname = 2;
}

message GetProjectReq {
  string proKey = 1;
}

message ProjectResp {
  string access_key = 1;
  string access_secret  = 2;
  string create_at = 3;
  string name = 4;
  uint32 status = 5;
  string type = 6;
}

//service
service usercenter {
  rpc getUserInfo(GetUserInfoReq) returns(GetUserInfoResp);
  rpc getProjectInfo(GetProjectReq) returns(ProjectResp);
  rpc getProjectInfoByProKey(GetProjectReq) returns(ProjectResp);
}